BEGIN_PACKAGE_CONFIG( utils )
ADD_SUBDIRECTORY( copycast )
ADD_PACKAGE_SUBDIRECTORY( tinyexpr )
ADD_PACKAGE_SUBDIRECTORY( threadpool )
IF ( USE_CUDA )
    SET_DEVICE_COMPILER( Algorithms.cpp )
    ADD_PACKAGE_SUBDIRECTORY( cuda )
    SET_DEVICE_COMPILER( cuda )
    ADD_SUBDIRECTORY(cuda/test)
ENDIF()
IF ( USE_HIP )
    SET_DEVICE_COMPILER( Algorithms.cpp )
    ADD_PACKAGE_SUBDIRECTORY( hip )
    SET_DEVICE_COMPILER( hip )
    ADD_SUBDIRECTORY( hip/test )
ENDIF()
IF ( USE_DEVICE )
    SET_DEVICE_COMPILER( device )
    ADD_PACKAGE_SUBDIRECTORY( device )
    SET_DEVICE_COMPILER( copycast/device )
    SET_DEVICE_COMPILER( copycast/CopyCast.cpp )
ENDIF()
IF ( CMAKE_Fortran_COMPILER AND NOT DISABLE_FORTRAN )
    ADD_PACKAGE_SUBDIRECTORY( fortran )
ENDIF()
INSTALL_AMP_TARGET( utils )

SET_DEVICE_COMPILER( KokkosManager.cpp )

ADD_SUBDIRECTORY( test )
ADD_SUBDIRECTORY( threadpool/test )


ADD_SUBDIRECTORY(examples)
