BEGIN_PACKAGE_CONFIG( vectors )
ADD_PACKAGE_SUBDIRECTORY( testHelpers )
ADD_PACKAGE_SUBDIRECTORY( operations )
ADD_PACKAGE_SUBDIRECTORY( data )
IF ( USE_OPENMP )
    ADD_PACKAGE_SUBDIRECTORY( operations/OpenMP )
ENDIF()
IF ( USE_CUDA )
    ADD_PACKAGE_SUBDIRECTORY( data/cuda )
    ADD_PACKAGE_SUBDIRECTORY( operations/cuda )
ENDIF()
IF ( USE_EXT_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
    ADD_PACKAGE_SUBDIRECTORY( testHelpers/trilinos )
    IF ( USE_TRILINOS_THYRA )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/thyra )
        ADD_PACKAGE_SUBDIRECTORY( testHelpers/trilinos/thyra )
    ENDIF()
    IF ( USE_TRILINOS_EPETRA )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/epetra )
    ENDIF()
ENDIF()
IF ( USE_EXT_PETSC )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
    ADD_PACKAGE_SUBDIRECTORY( testHelpers/petsc )
ENDIF()
IF ( USE_EXT_SUNDIALS )
    ADD_PACKAGE_SUBDIRECTORY( sundials )
    ADD_PACKAGE_SUBDIRECTORY( testHelpers/sundials )
ENDIF()
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
INSTALL_AMP_TARGET( vectors )

ADD_SUBDIRECTORY ( test )

