BEGIN_PACKAGE_CONFIG( vectors )
ADD_PACKAGE_SUBDIRECTORY( testHelpers )
ADD_PACKAGE_SUBDIRECTORY( operations )
ADD_PACKAGE_SUBDIRECTORY( data )
IF ( USE_OPENMP )
    ADD_PACKAGE_SUBDIRECTORY( operations/OpenMP )
ENDIF()
IF ( USE_CUDA )
    ADD_PACKAGE_SUBDIRECTORY( data/cuda )
    ADD_PACKAGE_SUBDIRECTORY( operations/cuda )
ENDIF()
IF ( USE_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
    ADD_PACKAGE_SUBDIRECTORY( testHelpers/trilinos )
    IF ( USE_TRILINOS_THYRA )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/thyra )
        ADD_PACKAGE_SUBDIRECTORY( testHelpers/trilinos/thyra )
    ENDIF()
    IF ( USE_TRILINOS_EPETRA )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/epetra )
        ADD_PACKAGE_SUBDIRECTORY( testHelpers/trilinos/epetra )
    ENDIF()
ENDIF()
IF ( USE_PETSC )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
    ADD_PACKAGE_SUBDIRECTORY( testHelpers/petsc )
ENDIF()
IF ( USE_SUNDIALS )
    ADD_PACKAGE_SUBDIRECTORY( sundials )
    ADD_PACKAGE_SUBDIRECTORY( testHelpers/sundials )
ENDIF()
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
INSTALL_AMP_TARGET( vectors )

IF ( USE_TRILINOS )
    SET_NVCC( VectorBuilderExternal.cpp trilinos testHelpers/trilinos )
    IF ( USE_TRILINOS_THYRA )
        SET_NVCC( trilinos/thyra testHelpers/trilinos/thyra )
    ENDIF()
    IF ( USE_TRILINOS_EPETRA )
        SET_NVCC( trilinos/epetra testHelpers/trilinos/epetra )
    ENDIF()
ENDIF()

ADD_SUBDIRECTORY ( test )

