############################################################################
#  Configure tests
############################################################################

# Copy test inputs
COPY_TEST_FILE( input_testNonlinear_MatproDensificationMaterialModel-1 )
COPY_TEST_FILE( input_testMultiBlockMatrix )
COPY_TEST_FILE( input_testConsistentTangent-1-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-1-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-1-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-1-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-2-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-2-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-2-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-2-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-3-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-3-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-3-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-3-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-4-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-4-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-4-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-4-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangentBVP-1-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-2-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-3-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-4-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-4-mesh1-reduced )
COPY_TEST_FILE( input_testNeutronicsRhs-db )
COPY_TEST_FILE( input_testNeutronicsRhs-1 )
COPY_TEST_FILE( input_testNeutronicsRhs-2 )
COPY_TEST_FILE( input_testNeutronicsRhs-3 )
COPY_TEST_FILE( input_testNeutronicsRhs-4 )
COPY_TEST_FILE( input_FickSoret-BVP-TUI-1 )
COPY_TEST_FILE( input_FickSoret-BVP-UO2MSRZC09-1 )
COPY_TEST_FILE( input_testLinearColumnOperator-1 )
COPY_TEST_FILE( input_FickSoret-TUI-1 )
COPY_TEST_FILE( input_FickSoret-UO2MSRZC09-1 )
COPY_TEST_FILE( input_testVolumeIntegral-1 )
COPY_TEST_FILE( input_testVolumeIntegral-2 )
COPY_TEST_FILE( input_testVolumeIntegral-3 )
COPY_TEST_FILE( input_LinearOp-Robin-1 )
COPY_TEST_FILE( input_testNonlinearRobin-1 )
COPY_TEST_FILE( input_testLinearOperator-1 )
COPY_TEST_FILE( input_testPowerShape-5 )
COPY_TEST_FILE( input_testPowerShape-3 )
COPY_TEST_FILE( input_testPowerShape-2 )
COPY_TEST_FILE( input_testPowerShape-1 )
COPY_TEST_FILE( input_testPowerShape-diffusion )
COPY_TEST_FILE( input_testPowerShapeToVolIntOperator )
COPY_TEST_FILE( input_testNeumannVectorCorrection )
COPY_TEST_FILE( input_testElementOperationFactory-1 )
COPY_TEST_FILE( input_MassLinearElement-create-1 )
COPY_TEST_FILE( input_testSurfaceIteratorBug )
COPY_TEST_FILE( input_testParameterFactory-1 )
COPY_TEST_FILE( input_testGradientOperator )
COPY_TEST_FILE( input_DiffusionLinearElement-create-1                              diffusion/data )
COPY_TEST_FILE( input_DiffusionNonlinearElement-create-1                           diffusion/data )
COPY_TEST_FILE( input_linearDiffusion-TUI-Soret-1                                  diffusion/data )
COPY_TEST_FILE( input_linearDiffusion-TUI-Fick-1                                   diffusion/data )
COPY_TEST_FILE( input_linearDiffusion-TUI-Thermal-1                                diffusion/data )
COPY_TEST_FILE( input_linearDiffusion-UO2MSRZC09-Fick-1                            diffusion/data )
COPY_TEST_FILE( input_linearDiffusion-UO2MSRZC09-Soret-1                           diffusion/data )
COPY_TEST_FILE( input_linearDiffusion-UO2MSRZC09-Thermal-1                         diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-TUI-Fick-DirichletMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-TUI-Soret-DirichletMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-TUI-Thermal-DirichletMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-UO2MSRZC09-Fick-DirichletMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-UO2MSRZC09-Soret-DirichletMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-UO2MSRZC09-Thermal-DirichletMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-TUI-Fick-RobinMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-TUI-Soret-RobinMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-TUI-Thermal-RobinMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-UO2MSRZC09-Fick-RobinMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-UO2MSRZC09-Soret-RobinMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearBVPOperator-Diffusion-UO2MSRZC09-Thermal-RobinMatrixCorrection-1 diffusion/data )
COPY_TEST_FILE( input_linearMechanics-1                                            mechanics/data )
COPY_TEST_FILE( input_linearMechanics-2                                            mechanics/data )
COPY_TEST_FILE( input_linearMechanics-3                                            mechanics/data )
COPY_TEST_FILE( input_linearMechanics-4                                            mechanics/data )
COPY_TEST_FILE( input_MechanicsLinearElement-create-1                              mechanics/data )
COPY_TEST_FILE( input_MechanicsNonlinearElement-create-1                           mechanics/data )
COPY_TEST_FILE( input_linearMechanics+ThermalDiffusion-TUI-1                       mechanics/data )
COPY_TEST_FILE( input_linearMechanics+ThermalDiffusion-UO2MSRZC09-1                mechanics/data )
COPY_TEST_FILE( input_linearMechanics+FickDiffusion-TUI-1                          mechanics/data )
COPY_TEST_FILE( input_linearMechanics+FickDiffusion-UO2MSRZC09-1                   mechanics/data )
COPY_TEST_FILE( input_linearThermalDiffusion+FickDiffusion-TUI-1                   diffusion/data )
COPY_TEST_FILE( input_linearBVP-Thermal+Fick+Dirichlet-TUI-1                       diffusion/data )
COPY_TEST_FILE( input_linearBVP-Thermal+Fick+Dirichlet-UO2MSRZC09-1                diffusion/data )
COPY_TEST_FILE( input_linearBVP-Thermal+Fick+Robin-TUI-1                           diffusion/data )
COPY_TEST_FILE( input_linearBVP-Thermal+Fick+Robin-UO2MSRZC09-1                    diffusion/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Dirichlet+Fick+Robin-TUI-1               mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Dirichlet+Thermal+Robin-TUI-1            mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Dirichlet+Fick+Robin-UO2MSRZC09-1        mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Thermal+Dirichlet-TUI-1                  mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Dirichlet+Thermal+Robin-UO2MSRZC09-1     mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Thermal+Dirichlet-UO2MSRZC09-1           mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Dirichlet+Thermal+Robin+Fick+Dirichlet-TUI-1 mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Dirichlet+Thermal+Robin+Fick+Dirichlet-UO2MSRZC09-1 mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Thermal+Fick+Dirichlet-TUI-1             mechanics/data )
COPY_TEST_FILE( input_linearBVP-Mechanics+Thermal+Fick+Dirichlet-UO2MSRZC09-1      mechanics/data )
COPY_TEST_FILE( input_linearThermalDiffusion+FickDiffusion-UO2MSRZC09-1            diffusion/data )
COPY_TEST_FILE( input_linearMechanics+ThermalDiffusion+FickDiffusion-TUI-1         mechanics/data )
COPY_TEST_FILE( input_linearMechanics+ThermalDiffusion+FickDiffusion-UO2MSRZC09-1  mechanics/data )


# Copy test data
IF ( AMP_DATA )
    COPY_MESH_FILE( pellet_1x.e )
    COPY_MESH_FILE( cylinder270.e )
    COPY_MESH_FILE( multiElementMesh.e )
    COPY_MESH_FILE( cylinder.e )
    COPY_MESH_FILE( cube.with.12.boundaries.e )
    COPY_MESH_FILE( cube64.with.boundary.labels.e )
ENDIF()


# Add the tests
INITIALIZE_TESTBUILDER()
ADD_TB_TEST_1_2_4( testOperatorParameterUnitTest )
IF ( USE_LIBMESH )
    ADD_TB_TEST( testGradientOperator input_testGradientOperator )
ENDIF()
IF ( USE_LIBMESH AND AMP_DATA )
    ADD_TB_TEST_1_2_4(testParameterFactory )
    ADD_TB_TEST( testMultiBlockMatrix )
    ADD_TB_TEST_1_2_4( testElementOperationFactory )
    ADD_TB_TEST( testSurfaceIteratorBug )
    ADD_TB_TEST_1_2_4( testNeumannVectorCorrection )
    ADD_TB_TEST( testStiffnessTransformation )
    ADD_TB_TEST( testPolarDecomposition )
    ADD_TB_PROVISIONAL_TEST( testInverseJacobianBug )
    ADD_TB_TEST_1_2_4( testPowerShapeToVolIntOperator )
    ADD_TB_TEST_1_2_4( testPowerShape )
    ADD_TB_TEST_1_2_4( testPowerShape_Zr )
    ADD_TB_TEST_1_2_4( testLinearOperator )
    ADD_TB_TEST_1_2_4( testLinearRobin )
    ADD_TB_TEST_1_2_4( testNonlinearRobin )
    ADD_TB_TEST_1_2_4( testVolumeIntegral )
    ADD_TB_TEST_1_2_4( testNonlinearFickSoret )
    ADD_TB_TEST_1_2_4( testFickSoretBVP )
    ADD_TB_TEST_1_2_4( testLinearColumnOperator )
    ADD_TB_TEST_1_2_4( testNeutronicsRhs )
    ADD_TB_TEST_1_2_4( testConsistentTangent )
    ADD_TB_TEST_1_2_4( testConsistentTangentBVP )
    ADD_TB_PROVISIONAL_TEST( testDiscreteOperatorParameters )
ENDIF()
FINALIZE_TESTBUILDER()


# Add subdirectories
ADD_SUBDIRECTORY( maps )
IF( USE_LIBMESH AND ( USE_TRILINOS OR USE_PETSC ) )
    ADD_SUBDIRECTORY( diffusion )
    ADD_SUBDIRECTORY( flow )
    ADD_SUBDIRECTORY( subchannel )
    ADD_SUBDIRECTORY( mechanics )
ENDIF()
IF( USE_DTK )
    ADD_SUBDIRECTORY( maps/dtk )
ENDIF()
IF( USE_DENDRO AND USE_LIBMESH )
    ADD_SUBDIRECTORY( dendro )
ENDIF()
IF( USE_MOAB )
    ADD_SUBDIRECTORY( moab )
ENDIF()

