############################################################################
#  Configure tests
############################################################################

# Copy test inputs
COPY_TEST_FILE( input_testNonlinear_MatproDensificationMaterialModel-1 )
COPY_TEST_FILE( input_testMultiBlockMatrix )
COPY_TEST_FILE( input_testConsistentTangent-1-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-1-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-1-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-1-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-2-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-2-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-2-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-2-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-3-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-3-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-3-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-3-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-4-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-4-mesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangent-4-cookMesh1-normal )
COPY_TEST_FILE( input_testConsistentTangent-4-cookMesh1-reduced )
COPY_TEST_FILE( input_testConsistentTangentBVP-1-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-2-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-3-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-4-mesh1-normal )
COPY_TEST_FILE( input_testConsistentTangentBVP-4-mesh1-reduced )
COPY_TEST_FILE( input_testNeutronicsRhs-db )
COPY_TEST_FILE( input_testNeutronicsRhs-1 )
COPY_TEST_FILE( input_testNeutronicsRhs-2 )
COPY_TEST_FILE( input_testNeutronicsRhs-3 )
COPY_TEST_FILE( input_testNeutronicsRhs-4 )
COPY_TEST_FILE( input_FickSoret-BVP-TUI-1 )
COPY_TEST_FILE( input_FickSoret-BVP-UO2MSRZC09-1 )
COPY_TEST_FILE( input_testLinearColumnOperator-1 )
COPY_TEST_FILE( input_FickSoret-TUI-1 )
COPY_TEST_FILE( input_FickSoret-UO2MSRZC09-1 )
COPY_TEST_FILE( input_testVolumeIntegral-1 )
COPY_TEST_FILE( input_testVolumeIntegral-2 )
COPY_TEST_FILE( input_testVolumeIntegral-3 )
COPY_TEST_FILE( input_LinearOp-Robin-1 )
COPY_TEST_FILE( input_testNonlinearRobin-1 )
COPY_TEST_FILE( input_testLinearOperator-1 )
COPY_TEST_FILE( input_testPowerShape-5 )
COPY_TEST_FILE( input_testPowerShape-3 )
COPY_TEST_FILE( input_testPowerShape-2 )
COPY_TEST_FILE( input_testPowerShape-1 )
COPY_TEST_FILE( input_testPowerShape-diffusion )
COPY_TEST_FILE( input_testPowerShapeToVolIntOperator )
COPY_TEST_FILE( input_testNeumannVectorCorrection )
COPY_TEST_FILE( input_testElementOperationFactory-1 )
COPY_TEST_FILE( input_MassLinearElement-create-1 )
COPY_TEST_FILE( input_testSurfaceIteratorBug )
COPY_TEST_FILE( input_testParameterFactory-1 )
COPY_TEST_FILE( input_testGradientOperator )


# Copy test data
IF ( AMP_DATA )
    COPY_MESH_FILE( pellet_1x.e )
ENDIF()


# Add the tests
INITIALIZE_TESTBUILDER()
ADD_TB_TEST_1_2_4( testOperatorParameterUnitTest )
IF ( USE_LIBMESH )
    ADD_TB_TEST( testGradientOperator input_testGradientOperator )
ENDIF()
IF ( USE_LIBMESH AND AMP_DATA )
    ADD_TB_TEST_1_2_4(testParameterFactory )
    ADD_TB_TEST( testMultiBlockMatrix )
    ADD_TB_TEST_1_2_4( testElementOperationFactory )
    ADD_TB_TEST( testSurfaceIteratorBug )
    ADD_TB_TEST_1_2_4( testNeumannVectorCorrection )
    ADD_TB_TEST( testStiffnessTransformation )
    ADD_TB_TEST( testPolarDecomposition )
    ADD_TB_PROVISIONAL_TEST( testInverseJacobianBug )
    ADD_TB_TEST_1_2_4( testPowerShapeToVolIntOperator )
    ADD_TB_TEST_1_2_4( testPowerShape )
    ADD_TB_TEST_1_2_4( testPowerShape_Zr )
    ADD_TB_TEST_1_2_4( testLinearOperator )
    ADD_TB_TEST_1_2_4( testLinearRobin )
    ADD_TB_TEST_1_2_4( testNonlinearRobin )
    ADD_TB_TEST_1_2_4( testVolumeIntegral )
    ADD_TB_TEST_1_2_4( testNonlinearFickSoret )
    ADD_TB_TEST_1_2_4( testFickSoretBVP )
    ADD_TB_TEST_1_2_4( testLinearColumnOperator )
    ADD_TB_TEST_1_2_4( testNeutronicsRhs )
    ADD_TB_TEST_1_2_4( testConsistentTangent )
    ADD_TB_TEST_1_2_4( testConsistentTangentBVP )
    ADD_TB_PROVISIONAL_TEST( testDiscreteOperatorParameters )
ENDIF()
FINALIZE_TESTBUILDER()


# Add subdirectories
ADD_SUBDIRECTORY( maps )
IF( USE_LIBMESH AND ( USE_TRILINOS OR USE_PETSC ) )
    ADD_SUBDIRECTORY( diffusion )
    ADD_SUBDIRECTORY( flow )
    ADD_SUBDIRECTORY( subchannel )
    ADD_SUBDIRECTORY( mechanics )
ENDIF()
IF( USE_DTK )
    ADD_SUBDIRECTORY( maps/dtk )
ENDIF()
IF( USE_DENDRO AND USE_LIBMESH )
    ADD_SUBDIRECTORY( dendro )
ENDIF()
IF( USE_MOAB )
    ADD_SUBDIRECTORY( moab )
ENDIF()

